--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto2-SO
 excludes=
+file.reference.org.json-1.6-20240205.jar=C:\\Users\\Ignacio\\Desktop\\org.json-1.6-20240205.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.org.json-1.6-20240205.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
