--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Ignacio\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+file.reference.org.json-1.6-20240205.jar=C:\\Users\\casti\\OneDrive\\Documentos\\NetBeansProjects\\Proyecto-C\\Proyecto2-SO\\src\\Libreria\\org.json-1.6-20240205.jar
+user.properties.file=C:\\Users\\casti\\AppData\\Roaming\\NetBeans\\17\\build.properties
